--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 models/Kim_MelBandRoformer.ckpt filter=lfs diff=lfs merge=lfs -text
 models/model_mel_band_roformer_karaoke_aufr33_viperx_sdr_10.1956.ckpt filter=lfs diff=lfs merge=lfs -text
+*.bat text eol=crlf
